--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,32 +10,40 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.1.4",
+    "@ant-design/icons": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "antd": "^5.7.0",
-    "framer-motion": "^10.12.21",
+    "antd": "^5.4.7",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "dayjs": "^1.11.9",
+    "firebase": "^9.23.0",
+    "framer-motion": "^10.12.12",
     "jwt-decode": "^3.1.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3",
+    "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/node": "^18.15.12",
+    "@types/node": "^18.16.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@types/uuid": "^9.0.2",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
+    "moment": "",
     "postcss": "^8.4.23",
-    "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "tailwindcss": "^3.3.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.0"
+    "vite": "^4.3.2"
   }
 }
